@@ -24,6 +24,8 @@ INCOMPATIBLE CHANGES
 
 IMPROVEMENTS
 
+PIG-2492: AvroStorage should recognize globs and commas (cheolsoo via sms)
+
 PIG-2706: Add clear to list of grunt commands (xalan via azaroth)
 
 PIG-2823: TestPigContext.testImportList() does not pass if another javac in on the PATH (julien)
